# meego-panel-zones

./: Makefile.am  autogen.sh  configure.ac
.tx/: config
data/: Makefile.am  meego-panel-zones.desktop.in.in
po/: ar.po  ast.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  eo.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  gd.po  gl.po  he.po  hi.po  hi_IN.po  hu.po  it.po  ja.po  km.po  ko.po  lo.po  lt.po  ml.po  nb.po  nl.po  no.po  pa.po  pl.po  (+20 more)
src/: main.c
